--- a/.gitignore
+++ b/.gitignore
@@ -86,4 +86,27 @@ applications/
 # API Keys and sensitive data
 *api_key*
 *secret*
-credentials.json 
+credentials.json
+
+# Added by Task Master AI
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+# Task files
+tasks.json
+tasks/ 
