--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,8 @@ python-dotenv>=1.0.0
 colorama==0.4.6
 tqdm==4.67.1
 PyPDF2==3.0.1
-python-docx==1.1.0 
+python-docx==1.1.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+websockets>=12.0 
